# mailrs

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  crates.js  example-config.toml  flake.nix  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml  flake-update.yml  gh-pages.yml
crates/mailrs/: Cargo.toml  build.rs  default.nix
crates/mailrs-config/: Cargo.toml
crates/mailrs-gui/: Cargo.toml
crates/mailrs-gui/src/: callbacks.rs  error.rs  lib.rs
crates/mailrs-gui/ui/list/: tag_list.slint
crates/mailrs-tui/: Cargo.toml
crates/mailrs-tui/src/: app.rs  context.rs  error.rs  focus.rs  lib.rs
crates/mailrs-tui/src/bindings/: binder.rs  mod.rs
crates/mailrs-tui/src/bindings/mappings/: commander.rs  logger.rs  mbox.rs  mod.rs  movement.rs
crates/mailrs-tui/src/commands/: close.rs  mod.rs  next_message.rs  prev_message.rs  query.rs  quit.rs
crates/mailrs-tui/src/model/: mod.rs
crates/mailrs-tui/src/widgets/: boxes.rs  logger.rs  mbox.rs  message.rs  mod.rs
crates/mailrs/src/: app.rs  cli.rs  error.rs  main.rs
crates/mailrs/src/gui/: error.rs  mod.rs
crates/mailrs/src/notmuch/: message.rs  request.rs  worker.rs
crates/mailrs/src/tui/: app.rs  error.rs  mod.rs
crates/mailrs/src/tui/bindings/: binder.rs  mod.rs
crates/mailrs/src/tui/bindings/mappings/: commander.rs  logger.rs  mbox.rs  movement.rs
crates/mailrs/src/tui/commands/: prev_message.rs  quit.rs
crates/mailrs/ui/list/: message.slint
crates/notmuch-async/: Cargo.toml
crates/notmuch-async/src/: database.rs  error.rs  handle.rs  lib.rs  message.rs  request.rs  worker.rs
mailrs/: all.html  enum.CurrentFocus.html  fn.main.html  fn.setup_logging.html  index.html  macro.map_key_to_function!.html  macro.map_key_to_function.html  sidebar-items.js  struct.AppWindow.html  struct.Durations.html  struct.Facade.html  struct.Font.html  struct.Guards.html  struct.MBox.html  struct.Message.html  struct.Palette.html  struct.Spaces.html  struct.Tag.html  struct.TextStyle.html  struct.Theme.html  struct.Typo.html
mailrs/app/: fn.start.html  index.html  sidebar-items.js
mailrs/app/slint_generatedAppWindow/: constant._THE_SAME_VERSION_MUST_BE_USED_FOR_THE_COMPILER_AND_THE_RUNTIME.html  index.html  struct.AppWindow.html  struct.InnerAppWindow.html  struct.InnerAppWindowFieldsOffsets.html  struct.InnerButton_root_5.html  struct.InnerButton_root_5FieldsOffsets.html  struct.InnerColorSchemeSelector_18.html  struct.InnerColorSchemeSelector_18FieldsOffsets.html  struct.InnerComponent_image_9.html  struct.InnerComponent_image_9FieldsOffsets.html  struct.InnerComponent_rectangle_15.html  struct.InnerComponent_rectangle_15FieldsOffsets.html  struct.InnerComponent_text_11.html  struct.InnerComponent_text_11FieldsOffsets.html  struct.InnerFluentPalette_19.html  struct.InnerFluentPalette_19FieldsOffsets.html  struct.SharedGlobals.html  struct.TextStyle.html
mailrs/cli/: enum.Mode.html  index.html  sidebar-items.js  struct.Cli.html
mailrs/config/: enum.ConfigError.html  fn.find_config_path_from_xdg.html  index.html  sidebar-items.js  struct.Config.html  struct.Notmuch.html
mailrs/error/: enum.ApplicationError.html  index.html  sidebar-items.js  struct.NotmuchError.html
mailrs/gui/: fn.run.html  index.html  sidebar-items.js
mailrs/gui/callbacks/: fn.register_callbacks.html  index.html  (+1 more)
mailrs/notmuch/: index.html  sidebar-items.js
mailrs/slint_generatedAppWindow/: constant._THE_SAME_VERSION_MUST_BE_USED_FOR_THE_COMPILER_AND_THE_RUNTIME.html  enum.CurrentFocus.html  index.html  sidebar-items.js  static.SLINT_EMBEDDED_RESOURCE_0.html  static.SLINT_EMBEDDED_RESOURCE_1.html  static.SLINT_EMBEDDED_RESOURCE_2.html  static.SLINT_EMBEDDED_RESOURCE_3.html  struct.AppWindow.html  struct.Durations.html  struct.Facade.html  struct.Font.html  struct.InnerAppWindow.html  struct.InnerAppWindowFieldsOffsets.html  struct.InnerAutoCompleteList_root_47.html  struct.InnerAutoCompleteList_root_47FieldsOffsets.html  struct.InnerButton_root_5.html  struct.InnerButton_root_5FieldsOffsets.html  struct.InnerColorSchemeSelector_18.html  struct.InnerColorSchemeSelector_18FieldsOffsets.html  struct.InnerColorSchemeSelector_70.html  struct.InnerColorSchemeSelector_70FieldsOffsets.html  struct.InnerComponent_image_9.html  struct.InnerComponent_image_9FieldsOffsets.html  struct.InnerComponent_rectangle_15.html  struct.InnerComponent_rectangle_15FieldsOffsets.html  struct.InnerComponent_rectangle_19.html  struct.InnerComponent_rectangle_19FieldsOffsets.html  struct.InnerComponent_rectangle_36.html  struct.InnerComponent_rectangle_36FieldsOffsets.html  struct.InnerComponent_rectangle_52.html  struct.InnerComponent_rectangle_52FieldsOffsets.html  struct.InnerComponent_text_11.html  struct.InnerComponent_text_11FieldsOffsets.html  struct.InnerFacade.html  struct.InnerFacadeFieldsOffsets.html  struct.InnerFluentPalette_19.html  struct.InnerFluentPalette_19FieldsOffsets.html  struct.InnerFluentPalette_71.html  struct.InnerFluentPalette_71FieldsOffsets.html  (+21 more)
mailrs/state/: index.html  struct.AppState.html  struct.Commander.html
mailrs/tui/: enum.Error.html  fn.init_panic_hook.html  fn.init_tui.html  fn.restore_tui.html  fn.run.html  index.html  sidebar-items.js
search.desc/mailrs/: mailrs-desc-0-.js
src/: app.rs  cli.rs  config.rs  error.rs  gui.rs  main.rs  tui.rs
src/commander/: mod.rs  test.rs
src/gui/: callbacks.rs  error.rs  mod.rs
src/mailrs/: app.rs.html  cli.rs.html  config.rs.html  error.rs.html  main.rs.html  tui.rs.html
src/notmuch/: error.rs  handle.rs  message.rs  mod.rs  query.rs  request.rs  tag.rs  tags.rs  worker.rs
src/state/: mod.rs
src/tui/: app.rs  commander.rs  context.rs  error.rs  focus.rs  jobserver.rs  mod.rs
trait.impl/const_field_offset/: trait.PinnedDrop.js
trait.impl/enum_iterator/: trait.Sequence.js
trait.impl/vtable/: trait.HasStaticVTable.js
ui/: app.slint  boxes.slint  commander.slint  global.slint  structs.slint  theme.slint
ui/components/: state_layer.slint
ui/widgets/: list_item.slint  list_view.slint  scroll_view.slint  widgets.slint
(+237 files in other folders)
