[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.dependencies]
mailrs-config.path = "crates/mailrs-config"
mailrs-gui.path = "crates/mailrs-gui"
mailrs-tui.path = "crates/mailrs-tui"
notmuch-async.path = "crates/notmuch-async"

serde = { version = "1", features = ["derive"] }
tokio = "1.47.1"
thiserror = "2"
tracing = "0.1.41"
