[package]
name = "mailrs-config"
version = "0.1.0"
edition = "2021"

license = "GPL-3.0-only"
description = "a notmuch GUI/TUI mail client"

[dependencies]
camino = { version = "1.2.1", features = ["serde1"] }
clap = { version = "4.5.48", features = ["color", "suggestions", "derive"] }
clap-verbosity-flag = { version = "3.0.3", default-features = false, features = ["tracing"] }
derive_more = { version = "2.0.1", features = ["try_into", "from", "display"] }
toml = "0.8"
xdg = "2.5.2"

thiserror.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["fs"] }
