[package]
name = "mailrs-gui"
version = "0.1.0"
edition = "2021"

license = "GPL-3.0-only"
description = "a notmuch GUI/TUI mail client - the GUI part"

[dependencies]
camino = { version = "1.1.10", features = ["serde1"] }
clap = { version = "4.5.34", features = ["color", "suggestions", "derive"] }
clap-verbosity-flag = { version = "3.0.3", default-features = false, features = ["tracing"] }
derive_more = { version = "2.0.1", features = ["try_into", "from", "display"] }
futures = "0.3.31"
human-panic = "2.0.3"
miette = { version = "7.5.0", features = ["fancy"] }
serde = { version = "1.0.219", features = ["derive"] }
slint = "1.8.0"
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.45.1", features = ["rt", "macros", "fs", "sync"] }
toml = "0.8.23"
tracing = "0.1.41"
log = "0.4"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "registry"] }
xdg = "2.5.2"

notmuch-async.workspace = true

[build-dependencies]
slint-build = { version = "1.8.0" }
