[package]
name = "mailrs"
version = "0.1.0"
edition = "2021"

license = "GPL-3.0-only"
description = "a notmuch GUI/TUI mail client"

[dependencies]
camino = { version = "1.1.9", features = ["serde1"] }
clap = { version = "4.5.34", features = ["color", "suggestions", "derive"] }
clap-verbosity-flag = { version = "3.0.2", default-features = false, features = ["tracing"] }
derive_more = { version = "2.0.1", features = ["try_into", "from", "display"] }
enum-iterator = { version = "2.1.0", optional = true }
futures = "0.3.31"
human-panic = "2.0.2"
miette = { version = "7.5.0", features = ["fancy"] }
nucleo-matcher = { version = "0.3.1", optional = true }
ratatui = { version = "0.29.0", features = ["crossterm"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
slint = { version = "1.8.0", optional = true }
thiserror = "2.0.11"
time = "0.3.41"
tokio = { version = "1.45.1", features = ["rt", "macros", "fs", "sync"] }
toml = "0.8.23"
tracing = "0.1.41"
log = "0.4"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry"] }
tui-commander.git = "https://github.com/matthiasbeyer/tui-commander"
tui-input = { version = "0.12.1", optional = true }
tui-widget-list = { version = "0.13.2", optional = true }
tui-logger =  {version = "0.17.3", default-features = false, features = [
  "tracing-support",
] }
xdg = "2.5.2"

notmuch-async.workspace = true

[build-dependencies]
slint-build = { version = "1.8.0", optional = true }

[features]
default = ["gui", "tui"]
gui = ["dep:slint", "dep:slint-build"]
tui = [
    "dep:enum-iterator",
    "dep:nucleo-matcher",
    "dep:ratatui",
    "dep:tui-input",
    "dep:tui-widget-list",
]
