[package]
name = "mailrs"
version = "0.1.0"
edition = "2021"

license = "GPL-3.0-only"
description = "a notmuch GUI/TUI mail client"

[dependencies]
camino = { version = "1.1.10", features = ["serde1"] }
cfg-if = "1"
clap = { version = "4.5.34", features = ["color", "suggestions", "derive"] }
clap-verbosity-flag = { version = "3.0.2", default-features = false, features = ["tracing"] }
derive_more = { version = "2.0.1", features = ["try_into", "from", "display"] }
futures = "0.3.31"
human-panic = "2.0.2"
miette = { version = "7.5.0", features = ["fancy"] }
serde = { version = "1.0.219", features = ["derive"] }
time = "0.3.41"
log = "0.4"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "registry"] }
xdg = "2.5.2"

mailrs-config.workspace = true
mailrs-gui.workspace = true
mailrs-tui.workspace = true
notmuch-async.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "fs", "sync"] }
tracing.workspace = true
