
[package]
name = "notmuch-async"
version = "0.1.0"
edition = "2021"

license = "GPL-3.0-only"
description = "an async notmuch client library"

[dependencies]
notmuch = "0.8.0"
static_assertions = "1"
thiserror = "2.0.12"
time = "0.3"
tokio = { version = "1.47.1", features = ["sync"] }
tracing = "0.1.41"
